Updating htmls for our dropdowns, functionality not included

--- a/force-app/main/default/lwc/restaurants/restaurants.html
+++ b/force-app/main/default/lwc/restaurants/restaurants.html
@@ -13,15 +13,9 @@
             <!-- <lightning-record-form object-api-name={ObjectApiName} fields={ContactFieldList} record-id={recordId} onsuccess={contactHandleUpdate}></lightning-record-form> -->
 
             <lightning-button
-                onclick={handleClick}
-                aria-haspopup="dialog"
-                label="Add a Restaurant">
-            </lightning-button>
-
-            <lightning-button
                 onclick={addR}
                 aria-haspopup="dialog"
-                label="Test button to add random restaurant">
+                label="Add a Restaurant (Hard coded vals)">
             </lightning-button>
             <lightning-button
                 onclick={handleDelete}
