--- a/force-app/main/default/lwc/sights/sights.html
+++ b/force-app/main/default/lwc/sights/sights.html
@@ -1,12 +1,27 @@
 <template>
     <lightning-accordion-section name="sights" label="Sights">
         <lightning-card>
+            <lightning-datatable
+                key-field="id"
+                data={sightData}
+                onrowselection={handleRowSelection}
+                columns={columns}>
+            </lightning-datatable>
+            
+            <!-- use inside modal -->
+            <!-- <lightning-record-form object-api-name={ObjectApiName} fields={ContactFieldList} record-id={recordId} onsuccess={contactHandleUpdate}></lightning-record-form> -->
+
             <lightning-button
-                onclick={handleClick}
+                onclick={handleAdd}
                 aria-haspopup="dialog"
-                label="Add a Sight"
-                slot="actions">
+                label="Add a Sight (Hard coded vals)">
             </lightning-button>
+            <lightning-button
+                onclick={handleDelete}
+                aria-haspopup="dialog"
+                label="Remove Selected">
+            </lightning-button>
+            
         </lightning-card>
     </lightning-accordion-section>
 </template>
