--- a/force-app/main/default/lwc/ticketsAndReservations/ticketsAndReservations.html
+++ b/force-app/main/default/lwc/ticketsAndReservations/ticketsAndReservations.html
@@ -1,11 +1,25 @@
 <template>
     <lightning-accordion-section name="ticketsAndReservations" label="Tickets and Reservations">
         <lightning-card>
+            <lightning-datatable
+                key-field="id"
+                data={reservationData}
+                onrowselection={handleRowSelection}
+                columns={columns}>
+            </lightning-datatable>
+            
+            <!-- use inside modal -->
+            <!-- <lightning-record-form object-api-name={ObjectApiName} fields={ContactFieldList} record-id={recordId} onsuccess={contactHandleUpdate}></lightning-record-form> -->
+
             <lightning-button
-                onclick={handleClick}
+                onclick={handleAdd}
                 aria-haspopup="dialog"
-                label="Add a Reservation"
-                slot="actions">
+                label="Add a Reservation (Hard coded vals)">
+            </lightning-button>
+            <lightning-button
+                onclick={handleDelete}
+                aria-haspopup="dialog"
+                label="Remove Selected">
             </lightning-button>
         </lightning-card>
     </lightning-accordion-section>
