--- a/force-app/main/default/lwc/checklist/checklist.html
+++ b/force-app/main/default/lwc/checklist/checklist.html
@@ -1,7 +1,13 @@
 <template>
     <lightning-accordion-section name="checklist" label="Checklist">
         <lightning-card>
-            <!-- add customizable checklist for things to bring on trip -->
+                <lightning-checkbox-group name="Checkbox Group"
+                                          label="Things to bring on my trip"
+                                          options={options}
+                                          value={value}
+                                          onchange={handleChange}></lightning-checkbox-group>
+                <p>Selected Values are: {selectedValues}</p>
+                <!-- input field to add to checkbox group -->
         </lightning-card>
     </lightning-accordion-section>
 </template>
