--- a/force-app/main/default/lwc/restaurants/restaurants.html
+++ b/force-app/main/default/lwc/restaurants/restaurants.html
@@ -28,6 +28,12 @@
                 aria-haspopup="dialog"
                 label="Remove Selected">
             </lightning-button>
+
+            <lightning-button
+                onclick={handleClick}
+                aria-haspopup="dialog"
+                label="Add a New Restaurant">
+            </lightning-button>
             
         </lightning-card>
     </lightning-accordion-section>
