--- a/force-app/main/default/lwc/ticketsAndReservations/ticketsAndReservations.html
+++ b/force-app/main/default/lwc/ticketsAndReservations/ticketsAndReservations.html
@@ -2,7 +2,7 @@
     <lightning-card>
         <lightning-datatable
             key-field="id"
-            data={reservationData}
+            data={ticketAndReservationData}
             onrowselection={handleRowSelection}
             columns={columns}>
         </lightning-datatable>
