Record form for restaurants

--- a/force-app/main/default/lwc/ticketsAndReservations/ticketsAndReservations.html
+++ b/force-app/main/default/lwc/ticketsAndReservations/ticketsAndReservations.html
@@ -20,5 +20,10 @@
             aria-haspopup="dialog"
             label="Remove Selected">
         </lightning-button>
+        <lightning-button
+            onclick={handleClick}
+            aria-haspopup="dialog"
+            label="Add a New Event">
+        </lightning-button>
     </lightning-card>
 </template>
