--- a/force-app/main/default/lwc/travelAppTripMap/travelAppTripMap.html
+++ b/force-app/main/default/lwc/travelAppTripMap/travelAppTripMap.html
@@ -1,3 +1,3 @@
 <template>
-    <lightning-map></lightning-map>
+    <lightning-map map-markers={mapMarkers} center={center} zoom-level={zoomLevel}></lightning-map>
 </template>
