--- a/force-app/main/default/lwc/sights/sights.html
+++ b/force-app/main/default/lwc/sights/sights.html
@@ -20,6 +20,10 @@
             aria-haspopup="dialog"
             label="Remove Selected">
         </lightning-button>
-        
+        <lightning-button
+            onclick={handleClick}
+            aria-haspopup="dialog"
+            label="Add a New Restaurant">
+        </lightning-button>
     </lightning-card>
 </template>
