Updated bad layout and naming

--- a/force-app/main/default/lwc/restaurants/restaurants.html
+++ b/force-app/main/default/lwc/restaurants/restaurants.html
@@ -11,7 +11,7 @@
         <!-- <lightning-record-form object-api-name={ObjectApiName} fields={ContactFieldList} record-id={recordId} onsuccess={contactHandleUpdate}></lightning-record-form> -->
 
         <lightning-button
-            onclick={addR}
+            onclick={handleAdd}
             aria-haspopup="dialog"
             label="Add a Restaurant (Hard coded vals)">
         </lightning-button>
