--- a/force-app/main/default/lwc/restaurantModal/restaurantModal.html
+++ b/force-app/main/default/lwc/restaurantModal/restaurantModal.html
@@ -6,34 +6,12 @@
                 <lightning-input type="text" label="Name"></lightning-input>
             </div>
         </div> -->
-            <!-- <lightning-input-address
-                address-label="Address"
-                street-label="Street"
-                city-label="City"
-                country-label="Country"
-                province-label="Province"
-                postal-code-label="Postal Code"
-                street=""
-                city=""
-                country=""
-                province=""
-                postal-code=""
-                required
-                field-level-help="Help Text for inputAddress field" >
-            </lightning-input-address> -->
-            <lightning-record-form
-                object-api-name={objectApiName}
-                fields={fields}
-                onsuccess={handleSuccess}>
-            </lightning-record-form>
-        <template for:each={options} for:item="option">
-            <lightning-button
-              onclick={handleOptionClick}
-              data-id={option.id}
-              key={option.id}
-            >
-                {option.label}
-            </lightning-button>
-        </template>
+        
+        <lightning-record-form
+            object-api-name={objectApiName}
+            fields={fields}
+            onsubmit={handleSubmit}
+            onerror={handleError}>
+        </lightning-record-form>
     </lightning-modal-body>
 </template>
