--- a/force-app/main/default/lwc/restaurants/restaurants.html
+++ b/force-app/main/default/lwc/restaurants/restaurants.html
@@ -5,8 +5,22 @@
             data={restaurantData}
             onrowselection={handleRowSelection}
             columns={columns}>
-        </lightning-datatable>
-        
+        </lightning-datatable>    
+        <lightning-input-address
+            address-label="Address"
+            street-label="Street"
+            city-label="City"
+            country-label="Country"
+            province-label="Province"
+            postal-code-label="PostalCode"
+            street="121 Spear St."
+            city="San Francisco"
+            country="US"
+            province="CA"
+            postal-code="94105"
+            required
+            field-level-help="Help Text for inputAddress field">
+        </lightning-input-address>
         <!-- use inside modal -->
         <!-- <lightning-record-form object-api-name={ObjectApiName} fields={ContactFieldList} record-id={recordId} onsuccess={contactHandleUpdate}></lightning-record-form> -->
 
