--- a/force-app/main/default/lwc/restaurantModal/restaurantModal.html
+++ b/force-app/main/default/lwc/restaurantModal/restaurantModal.html
@@ -1,17 +1,12 @@
 <template>
     <lightning-modal-header label="Add a New Restaurant"></lightning-modal-header>
     <lightning-modal-body>
-        <!-- <div class="slds-m-top_small slds-m-bottom_small">
-            <div>
-                <lightning-input type="text" label="Name"></lightning-input>
-            </div>
-        </div> -->
-        
         <lightning-record-form
             object-api-name={objectApiName}
             fields={fields}
             onsubmit={handleSubmit}
-            onerror={handleError}>
+            onerror={handleError}
+            onsuccess={handleSuccess}>
         </lightning-record-form>
     </lightning-modal-body>
 </template>
