Add trip and delete trip done

--- a/force-app/main/default/lwc/ticketsAndReservations/ticketsAndReservations.html
+++ b/force-app/main/default/lwc/ticketsAndReservations/ticketsAndReservations.html
@@ -9,7 +9,7 @@
         <lightning-button
             onclick={handleClick}
             aria-haspopup="dialog"
-            label="Add a New Restaurant">
+            label="Add a New Ticket or Reservation">
         </lightning-button>
         <lightning-button
             onclick={handleDelete}
