--- a/force-app/main/default/lwc/sights/sights.html
+++ b/force-app/main/default/lwc/sights/sights.html
@@ -9,7 +9,7 @@
         <lightning-button
             onclick={handleClick}
             aria-haspopup="dialog"
-            label="Add a New Restaurant">
+            label="Add a New Sight">
         </lightning-button>
         <lightning-button
             onclick={handleDelete}
