--- a/force-app/main/default/lwc/travelAppTrip/travelAppTrip.html
+++ b/force-app/main/default/lwc/travelAppTrip/travelAppTrip.html
@@ -1,13 +1,11 @@
 <template>
-    <lightning-layout multiple-rows="true">
-        <lightning-layout-item padding="around-small" size="8">
-            <div class="page-section page-right">
+    <div class="slds-m-top_medium slds-m-bottom_x-large slds-p-around_small">
+        <lightning-layout multiple-rows="true">
+            <lightning-layout-item padding="around-small" size="8">
                 <c-travel-app-trip-map trip-id={tripId}></c-travel-app-trip-map>
                 <!-- add a slider here maybe to edit map size -->
-            </div>
-        </lightning-layout-item>
-        <lightning-layout-item padding="medium" size="4">
-            <div class="page-section page-main">
+            </lightning-layout-item>
+            <lightning-layout-item padding="around-small" size="4">
                 <lightning-accordion allow-multiple-sections-open>
                     <lightning-accordion-section name="restaurants" label="Restaurants">
                         <c-restaurants trip-id={tripId}></c-restaurants>
@@ -21,8 +19,14 @@
                     <lightning-accordion-section name="checklist" label="Checklist">
                         <c-checklist></c-checklist>
                     </lightning-accordion-section>
-                </lightning-accordion>    
-            </div>
-        </lightning-layout-item>
-    </lightning-layout>
+                </lightning-accordion>
+            </lightning-layout-item>
+        </lightning-layout>
+        <lightning-button
+            onclick={handleDeleteTrip}
+            variant="destructive"
+            label="Delete this Trip"
+            class="slds-float_right">
+        </lightning-button>
+    </div>
 </template>
