--- a/force-app/main/default/lwc/sights/sights.html
+++ b/force-app/main/default/lwc/sights/sights.html
@@ -7,12 +7,12 @@
             columns={columns}>
         </lightning-datatable>
         <lightning-button
-            onclick={handleClick}
+            onclick={handleAddSight}
             aria-haspopup="dialog"
             label="Add a New Sight">
         </lightning-button>
         <lightning-button
-            onclick={handleDelete}
+            onclick={handleDeleteSight}
             aria-haspopup="dialog"
             label="Remove Selected">
         </lightning-button>
