--- a/force-app/main/default/lwc/ticketsAndReservations/ticketsAndReservations.html
+++ b/force-app/main/default/lwc/ticketsAndReservations/ticketsAndReservations.html
@@ -7,12 +7,12 @@
             columns={columns}>
         </lightning-datatable>
         <lightning-button
-            onclick={handleClick}
+            onclick={handleAddTicketOrReservation}
             aria-haspopup="dialog"
             label="Add a New Ticket or Reservation">
         </lightning-button>
         <lightning-button
-            onclick={handleDelete}
+            onclick={handleDeleteTicketOrReservation}
             aria-haspopup="dialog"
             label="Remove Selected">
         </lightning-button>
