--- a/force-app/main/default/lwc/travelApp/travelApp.html
+++ b/force-app/main/default/lwc/travelApp/travelApp.html
@@ -1,7 +1,7 @@
 <template>
     <lightning-card title="Travel Itinerary">
         <lightning-button
-            onclick={handleClick}
+            onclick={handleAddTrip}
             aria-haspopup="dialog"
             label="Create New Trip"
             slot="actions">
