deleting unnecessary controllers, updating html

--- a/force-app/main/default/lwc/travelAppTripMap/travelAppTripMap.html
+++ b/force-app/main/default/lwc/travelAppTripMap/travelAppTripMap.html
@@ -1,3 +1,7 @@
 <template>
-    <lightning-map map-markers={mapMarkers} center={mapCenter} zoom-level={zoomLevel}></lightning-map>
+    <lightning-map 
+        map-markers={mapMarkers} 
+        center={mapCenter} 
+        zoom-level={zoomLevel}>
+    </lightning-map>
 </template>
