Removing unfinished checklist for demo

--- a/force-app/main/default/lwc/checklist/checklist.html
+++ b/force-app/main/default/lwc/checklist/checklist.html
@@ -1,10 +1,12 @@
 <template>
     <lightning-card>
-            <lightning-checkbox-group name="Checkbox Group"
-                                        label="Things to bring on my trip"
-                                        options={options}
-                                        value={value}
-                                        onchange={handleChange}></lightning-checkbox-group>
+            <lightning-checkbox-group 
+                name="Checkbox Group"
+                label="Things to bring on my trip"
+                options={options}
+                value={value}
+                onchange={handleChange}>
+            </lightning-checkbox-group>
             <p>Selected Values are: {selectedValues}</p>
             <!-- input field to add to checkbox group -->
     </lightning-card>
